# copium

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.lua  build.sh
.github/workflows/: build.yml
client/: build.lua
client/source/: client.cpp
setup/: linux.sh  windows.bat
source/: main.cpp
source/assets/shaders/pbr/: fs_pbr.sc  pbr.frag.glsl  pbr.vert.glsl  varying.def.sc  vs_pbr.sc
source/copium/: copium.cpp  copium.cppm
source/copium/fs/: paths.cppm
source/copium/input/: input.cppm  keyboard.cppm
source/copium/logging/: logging.cppm
source/copium/render/: generate.cppm  vulkan.cppm
source/copium/render/basic/: basic.cppm.old
source/copium/render/pbr/: camera.cppm  light.cppm  material.cppm  mesh.cppm  pbr.cppm  renderer.cppm
source/copium/time/: time.cppm
source/copium/window/: window.cppm
